--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.28.0
-   torch==2.0.1
-   torchvision==0.15.2
-   pillow==10.0.0
-   numpy==1.24.3
-   matplotlib==3.7.2
-   gdown==4.7.1
+streamlit>=1.28.0
+torch>=2.0.0
+torchvision>=0.15.0
+pillow>=10.0.0
+numpy>=1.24.0
+matplotlib>=3.7.0
+gdown>=4.7.0
